--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
   <div class="log hidden">
     <div class="overlay" onclick="closeLog()"></div>
     <div class="dialog">
-      <h3 class="title">Route <span class="lognum">XY</span></h3>
+      <div class="daterow"><input type="date" class="date" /></div>
       <div class="row">
-        <input type="date" class="date" />
         <div class="labeledInput">
           With: <input type="text" class="companions" />
         </div>
       </div>
+      <hr />
+      <h3 class="title">Route <span class="lognum">XY</span></h3>
       <div class="perRouteValues">
         <div class="row">
           <div class="labeledInput">
