fixing bug and adding data

--- a/index.html
+++ b/index.html
@@ -14,13 +14,23 @@
   <button id="appsWidgetButton"></button>
   <div class="maincontainer">
     <img class="map" src="map.png" />
-    <button class="thirtyseven number" id="id37" onclick="openLog(37)">37</button>
+    <button class="eighteen number" id="id18" onclick="openLog(18)">18</button>
+    <button class="nineteen number" id="id19" onclick="openLog(19)">19</button>
+    <button class="twenty number" id="id20" onclick="openLog(20)">20</button>
+    <button class="twentyeight number" id="id28" onclick="openLog(28)">28</button>
+    <button class="twentynine number" id="id29" onclick="openLog(29)">29</button>
+    <button class="thirty number" id="id30" onclick="openLog(30)">30</button>
+    <button class="thirtyone number" id="id31" onclick="openLog(31)">31</button>
+    <button class="thirtyfive number" id="id35" onclick="openLog(35)">35</button>
     <button class="thirtysix number" id="id36" onclick="openLog(36)">36</button>
+    <button class="thirtyseven number" id="id37" onclick="openLog(37)">37</button>
     <button class="thirtyeight number" id="id38" onclick="openLog(38)">38</button>
     <button class="thirtynine number" id="id39" onclick="openLog(39)">39</button>
     <button class="forty number" id="id40" onclick="openLog(40)">40</button>
     <button class="fortyone number" id="id41" onclick="openLog(41)">41</button>
     <button class="fortytwo number" id="id42" onclick="openLog(42)">42</button>
+    <button class="fortythree number" id="id43" onclick="openLog(43)">43</button>
+    <button class="fortyfour number" id="id44" onclick="openLog(44)">44</button>
     <button class="fortyseven number" id="id47" onclick="openLog(47)">47</button>
     <button class="fortyeight number" id="id48" onclick="openLog(48)">48</button>
     <button class="fortynine number" id="id49" onclick="openLog(49)">49</button>
@@ -28,6 +38,14 @@
     <button class="fiftyone number" id="id51" onclick="openLog(51)">51</button>
     <button class="fiftytwo number" id="id52" onclick="openLog(52)">52</button>
     <button class="fiftythree number" id="id53" onclick="openLog(53)">53</button>
+    <button class="fiftyfour number" id="id54" onclick="openLog(54)">54</button>
+    <button class="fiftyfive number" id="id55" onclick="openLog(55)">55</button>
+    <button class="sixtyfive number" id="id65" onclick="openLog(65)">65</button>
+    <button class="sixtysix number" id="id66" onclick="openLog(66)">66</button>
+    <button class="sixtyseven number" id="id67" onclick="openLog(67)">67</button>
+    <button class="sixtyeight number" id="id68" onclick="openLog(68)">68</button>
+    <button class="sixtynine number" id="id69" onclick="openLog(69)">69</button>
+    <button class="seventy number" id="id70" onclick="openLog(70)">70</button>
   </div>
   <button class="pastclimbs" onclick="openClimbs()">Past climbs</button>
   <div class="climbs hidden">
